--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,1 @@
-<mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title> Angular Components </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="panel-content">
-      <p>Some text</p>
-    </div>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title> Data Binding </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="panel-content">
-      <p>Some text</p>
-    </div>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title> Reactive Forms </mat-panel-title>
-    </mat-expansion-panel-header>
-    <div class="panel-content">
-      <p>Some text</p>
-    </div>
-  </mat-expansion-panel>
-</mat-accordion>
+<router-outlet></router-outlet>
