--- a/src/app/layout/playground/playground.component.html
+++ b/src/app/layout/playground/playground.component.html
@@ -1,7 +1,9 @@
 <mat-accordion [multi]="false">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-title> Angular Components </mat-panel-title>
+      <mat-panel-title>
+        <h2 class="panel-header">Angular Components</h2>
+      </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="panel-content">
       <app-component-playground></app-component-playground>
@@ -10,7 +12,9 @@
 
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-title> Data Binding </mat-panel-title>
+      <mat-panel-title>
+        <h2 class="panel-header">Data Binding</h2>
+      </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="panel-content">
       <app-data-binding-playground></app-data-binding-playground>
@@ -19,7 +23,9 @@
 
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-title> Reactive Forms </mat-panel-title>
+      <mat-panel-title>
+        <h2 class="panel-header">Reactive Forms</h2></mat-panel-title
+      >
     </mat-expansion-panel-header>
     <div class="panel-content">
       <app-forms-playground></app-forms-playground>
