--- a/src/app/layout/playground/component-playground/component-playground.component.html
+++ b/src/app/layout/playground/component-playground/component-playground.component.html
@@ -1,1 +1,11 @@
-<p>component-playground works!</p>
+<mat-tab-group mat-stretch-tabs="false" animationDuration="0ms">
+  <mat-tab label="Default">
+    <div class="tab-content">Default</div>
+  </mat-tab>
+  <mat-tab label="Standalone">
+    <div class="tab-content">Standalone</div>
+  </mat-tab>
+  <mat-tab label="Lifecycle Hooks">
+    <div class="tab-content">Lifecycle Hooks</div>
+  </mat-tab>
+</mat-tab-group>
