Created component examples

--- a/src/app/layout/playground/component-playground/component-playground.component.html
+++ b/src/app/layout/playground/component-playground/component-playground.component.html
@@ -1,11 +1,17 @@
 <mat-tab-group mat-stretch-tabs="false" animationDuration="0ms">
   <mat-tab label="Default">
-    <div class="tab-content">Default</div>
+    <div class="tab-content">
+      <app-default></app-default>
+    </div>
   </mat-tab>
   <mat-tab label="Standalone">
-    <div class="tab-content">Standalone</div>
+    <div class="tab-content">
+      <app-standalone></app-standalone>
+    </div>
   </mat-tab>
   <mat-tab label="Lifecycle Hooks">
-    <div class="tab-content">Lifecycle Hooks</div>
+    <div class="tab-content">
+      <app-lifecycle></app-lifecycle>
+    </div>
   </mat-tab>
 </mat-tab-group>
