Added data binding components

--- a/src/app/layout/playground/data-binding-playground/data-binding-playground.component.html
+++ b/src/app/layout/playground/data-binding-playground/data-binding-playground.component.html
@@ -1,1 +1,17 @@
-<p>data-binding-playground works!</p>
+<mat-tab-group mat-stretch-tabs="false" animationDuration="0ms">
+  <mat-tab label="Inputs">
+    <div class="tab-content">
+      <app-input></app-input>
+    </div>
+  </mat-tab>
+  <mat-tab label="Outputs">
+    <div class="tab-content">
+      <app-output></app-output>
+    </div>
+  </mat-tab>
+  <mat-tab label="Two-way data binding">
+    <div class="tab-content">
+      <app-two-way></app-two-way>
+    </div>
+  </mat-tab>
+</mat-tab-group>
