Added data binding examples

--- a/src/app/layout/playground/data-binding-playground/child/child.component.html
+++ b/src/app/layout/playground/data-binding-playground/child/child.component.html
@@ -1,1 +1,8 @@
-<p>child works!</p>
+<p>
+  Favorite city is: <b> {{ favoriteCity }}</b>
+</p>
+
+
+<button mat-stroked-button color="primary" (click)="emitFavoriteCountry()">
+  Emit favorite country to parent component
+</button>
