--- a/src/app/layout/playground/forms-playground/forms-playground.component.html
+++ b/src/app/layout/playground/forms-playground/forms-playground.component.html
@@ -1,1 +1,26 @@
-<p>forms-playground works!</p>
+<form (submit)="submitForm()" class="example-form" >
+  <mat-form-field class="example-full-width">
+    <mat-label>Email</mat-label>
+    <input
+      type="email"
+      matInput
+      [formControl]="emailFormControl"
+      placeholder="Ex. example@email.com"
+    />
+    <mat-error
+      *ngIf="
+        emailFormControl.hasError('email') &&
+        !emailFormControl.hasError('required')
+      "
+    >
+      Please enter a valid email address
+    </mat-error>
+    <mat-error *ngIf="emailFormControl.hasError('required')">
+      Email is <strong>required</strong>
+    </mat-error>
+  </mat-form-field>
+
+  <button type="submit" mat-stroked-button color="primary">
+    Submit
+  </button>
+</form>
