--- a/src/app/layout/playground/forms-playground/forms-playground.component.html
+++ b/src/app/layout/playground/forms-playground/forms-playground.component.html
@@ -1,26 +1,58 @@
-<form (submit)="submitForm()" class="example-form" >
-  <mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input
-      type="email"
-      matInput
-      [formControl]="emailFormControl"
-      placeholder="Ex. example@email.com"
-    />
-    <mat-error
-      *ngIf="
-        emailFormControl.hasError('email') &&
-        !emailFormControl.hasError('required')
-      "
-    >
-      Please enter a valid email address
-    </mat-error>
-    <mat-error *ngIf="emailFormControl.hasError('required')">
-      Email is <strong>required</strong>
-    </mat-error>
-  </mat-form-field>
+<mat-tab-group mat-stretch-tabs="false" animationDuration="0ms">
+  <mat-tab label="Form Controls">
+    <form (submit)="submitFormControl()" class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input
+          type="email"
+          matInput
+          [formControl]="emailFormControl"
+          placeholder="Ex. example@email.com"
+        />
+        <mat-error
+          *ngIf="
+            emailFormControl.hasError('email') &&
+            !emailFormControl.hasError('required')
+          "
+        >
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
 
-  <button type="submit" mat-stroked-button color="primary">
-    Submit
-  </button>
-</form>
+      <button type="submit" mat-stroked-button color="primary">Submit</button>
+    </form>
+  </mat-tab>
+  <mat-tab label="Form Groups">
+    <form
+      [formGroup]="exampleForm"
+      (submit)="submitFormGroup()"
+      class="example-form"
+    >
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input
+          type="email"
+          matInput
+          formControlName="email"
+          placeholder="Ex. example@email.com"
+        />
+        <mat-error
+          *ngIf="
+            emailFormControl.hasError('email') &&
+            !emailFormControl.hasError('required')
+          "
+        >
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+
+      <button type="submit" mat-stroked-button color="primary">Submit</button>
+    </form>
+  </mat-tab>
+</mat-tab-group>
