--- a/src/app/layout/playground/forms-playground/forms-playground.component.scss
+++ b/src/app/layout/playground/forms-playground/forms-playground.component.scss
@@ -1,7 +1,9 @@
 .example-form {
-  min-width: 150px;
+  min-width: 100px;
   max-width: 500px;
   width: 100%;
+  height: 150px;
+  padding-top: 12px;
 }
 
 .example-full-width {
